Descrição das mudanças feitas

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,15 @@
         <button type="submit">Adicionar Contato</button>
     </form>
 
+    <div class="filter-container">
+        <input type="text" id="search-input" placeholder="Buscar por nome ou telefone">
+        <select id="filter-category">
+            <option value="">Todas as categorias</option>
+            <option value="Malling">Malling</option>
+            <option value="Leads">Leads</option>
+        </select>
+    </div>    
+
     <table>
         <thead>
             <tr>
